@@ -8,7 +8,6 @@ import io.confluent.idesidecar.restapi.exceptions.Failure;
 import io.confluent.idesidecar.restapi.models.Connection;
 import io.confluent.idesidecar.restapi.models.ConnectionSpec;
 import io.confluent.idesidecar.restapi.models.ConnectionsList;
-import io.quarkus.logging.Log;
 import io.smallrye.common.annotation.Blocking;
 import io.smallrye.mutiny.Uni;
 import jakarta.inject.Inject;
@@ -22,9 +21,6 @@ import jakarta.ws.rs.PathParam;
 import jakarta.ws.rs.Produces;
 import jakarta.ws.rs.QueryParam;
 import jakarta.ws.rs.core.MediaType;
-import java.util.concurrent.CompletableFuture;
-import java.util.concurrent.CompletionStage;
-import java.util.stream.Collectors;
 import org.eclipse.microprofile.openapi.annotations.media.Content;
 import org.eclipse.microprofile.openapi.annotations.media.Schema;
 import org.eclipse.microprofile.openapi.annotations.responses.APIResponse;
@@ -50,35 +46,13 @@ public class ConnectionsResource {
 
   @GET
   @Produces(MediaType.APPLICATION_JSON)
-  public Uni<ConnectionsList> listConnections() {
-    return Uni.createFrom()
-        .item(() -> connectionStateManager.getConnectionStates())
-        .onItem().transformToUni(connectionStates -> {
-          var connectionFutures = connectionStates
-              .stream()
-              .map(connection -> Uni
-                  .createFrom()
-                  .completionStage(() -> getConnectionModel(connection.getSpec().id())))
-              .collect(Collectors.toList());
-          if (connectionFutures.isEmpty()) {
-            Log.debug("Returning no connections");
-            return Uni
-                .createFrom()
-                .item(new ConnectionsList());
-          }
-          Log.debugf("Returning %d connections", connectionFutures.size());
-          return Uni
-              .combine()
-              .all()
-              .unis(connectionFutures)
-              .with(connections -> {
-                var connectionList = connections
-                    .stream()
-                    .map(connection -> (Connection) connection)
-                    .collect(Collectors.toList());
-                return new ConnectionsList(connectionList);
-              });
-        });
+  public ConnectionsList listConnections() {
+    var connections = connectionStateManager
+        .getConnectionStates()
+        .stream()
+        .map(connection -> getConnectionModel(connection.getSpec().id()))
+        .toList();
+    return new ConnectionsList(connections);
   }
 
   @POST
@@ -120,8 +94,9 @@ public class ConnectionsResource {
   @GET
   @Path("/{id}")
   @Produces(MediaType.APPLICATION_JSON)
-  public Uni<Connection> getConnection(@PathParam("id") String id) {
-    return Uni.createFrom().completionStage(() -> getConnectionModel(id));
+  public Connection getConnection(@PathParam("id") String id) {
+    ConnectionState connectionState = connectionStateManager.getConnectionState(id);
+    return Connection.from(connectionState);
   }
 
   @PUT
@@ -161,7 +136,7 @@ public class ConnectionsResource {
   public Uni<Connection> updateConnection(@PathParam("id") String id, ConnectionSpec spec) {
     return connectionStateManager
         .updateSpecForConnectionState(id, spec)
-        .chain(ignored -> Uni.createFrom().completionStage(() -> getConnectionModel(id)));
+        .chain(ignored -> Uni.createFrom().item(() -> getConnectionModel(id)));
   }
 
   @DELETE
@@ -170,15 +145,9 @@ public class ConnectionsResource {
     connectionStateManager.deleteConnectionState(id);
   }
 
-  private CompletionStage<Connection> getConnectionModel(String id) {
-    try {
-      ConnectionState connectionState = connectionStateManager.getConnectionState(id);
-      return connectionState
-          .refreshStatus()
-          .map(connectionStatus -> Connection.from(connectionState, connectionStatus))
-          .toCompletionStage();
-    } catch (ConnectionNotFoundException e) {
-      return CompletableFuture.failedFuture(e);
-    }
+  private Connection getConnectionModel(String id) {
+    return Connection.from(
+        connectionStateManager.getConnectionState(id)
+    );
   }
 }
